tests/baselines/reference/multiModuleClodule1.errors.txt
multiModuleClodule1.ts(8,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
multiModuleClodule1.ts(12,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== multiModuleClodule1.ts (2 errors) ====
    class C {
        constructor(x: number) { }
        foo() { }
        bar() { }
        static boo() { }
    }
    
    module C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var x = 1;
        var y = 2;
    }
    module C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function foo() { }
        function baz() { return ''; }
    }
    
    var c = new C(C.x);
    c.foo = C.foo;